api-server/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-server-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: selfsigned-clusterissuer
spec:
  rules:
    - host: api-server.testing1.k8s-cluster.tango.rid-intrasoft.eu
      http:
        paths:
          - path: /resource
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-server-service
                port:
                  number: 80
          - path: /access_map
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-server-service
                port:
                  number: 80
          - path: /add_permission
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-server-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-server-service
                port:
                  number: 80
  tls:
    - hosts:
        - api-server.testing1.k8s-cluster.tango.rid-intrasoft.eu
      secretName: api-server-tls-secret
